# alpha-store

./: .coverage  .gitignore  README.md  extra.py  playground.ipynb  products.json  pyproject.toml
alpha_store/: __init__.py  config.ini  main.py  models.py  tools.py  wsgi.py
alpha_store/analytics/: views.py
alpha_store/auth/: models.py  serializer.py  views.py
alpha_store/catalog/: views.py
migrations/: env.py
migrations/versions/: 162418348d12_added_analytic_table.py  1c36b72d9762_updated_relationships.py  37b04528e4cf_products_table_added.py  3c39a7bd699d_first.py  b916e2b42bee_updating_product_model.py
tests/: auth_tests_base.py  tests_auth.py  tests_catalog.py  tests_user.py
